@@ -2614,27 +2614,32 @@ SUB sfunctions(byval cmdid as integer)
   IF valid_plottextslice(retvals(0)) THEN
    ChangeTextSlice plotslices(retvals(0)), , ,(retvals(1)<>0)
   END IF
- CASE 433'--slice at pixel(parent, x, y, num, descend)
+ CASE 433'--slice at pixel(parent, x, y, num, descend, visibleonly)
+  'visibleonly is recent addition
+  IF curcmd->argc < 6 THEN retvals(5) = 0
   IF valid_plotslice(retvals(0)) THEN
    RefreshSliceScreenPos plotslices(retvals(0))
    IF retvals(3) <= -1 THEN
     DIM slnum as integer = -1
-    FindSliceAtPoint(plotslices(retvals(0)), retvals(1), retvals(2), slnum, retvals(4))
+    FindSliceAtPoint(plotslices(retvals(0)), retvals(1), retvals(2), slnum, retvals(4), retvals(5))
     scriptret = -slnum - 1
    ELSE
-    scriptret = find_plotslice_handle(FindSliceAtPoint(plotslices(retvals(0)), retvals(1), retvals(2), retvals(3), retvals(4)))
+    DIM slnum as integer = retvals(3)  ' Avoid modification to retvals
+    scriptret = find_plotslice_handle(FindSliceAtPoint(plotslices(retvals(0)), retvals(1), retvals(2), slnum, retvals(4), retvals(5)))
    END IF
   END IF
- CASE 434'--find colliding slice(parent, handle, num, descend)
+ CASE 434'--find colliding slice(parent, handle, num, descend, visibleonly)
+  IF curcmd->argc < 5 THEN retvals(4) = 0
   IF valid_plotslice(retvals(0)) AND valid_plotslice(retvals(1)) THEN
    RefreshSliceScreenPos plotslices(retvals(0))
    RefreshSliceScreenPos plotslices(retvals(1))
    IF retvals(2) <= -1 THEN
     DIM slnum as integer = -1
-    FindSliceCollision(plotslices(retvals(0)), plotslices(retvals(1)), slnum, retvals(3))
+    FindSliceCollision(plotslices(retvals(0)), plotslices(retvals(1)), slnum, retvals(3), retvals(4))
     scriptret = -slnum - 1
    ELSE
-    scriptret = find_plotslice_handle(FindSliceCollision(plotslices(retvals(0)), plotslices(retvals(1)), retvals(2), retvals(3)))
+    DIM slnum as integer = retvals(2)  ' Avoid modification to retvals
+    scriptret = find_plotslice_handle(FindSliceCollision(plotslices(retvals(0)), plotslices(retvals(1)), slnum, retvals(3), retvals(4)))
    END IF
   END IF
  CASE 435'--parent slice
